examples/bad/runtime1.swifty
//division by zero

print 5/0
